fix missing text-align

--- a/client/modules/ftml-components/src/theme/_tabview.scss
+++ b/client/modules/ftml-components/src/theme/_tabview.scss
@@ -12,6 +12,7 @@
 .wj-tabs-button {
   padding: 0.25em;
   font-weight: bold;
+  text-align: center;
   background: #f5f5f5;
   border-bottom: solid 1px #ccc;
   border-left: solid 1px #ccc;
